# bgg-filter

./: .gitignore  README.md  app.py  boardgames_with_details.feather  common.py  justfile  pyproject.toml  workbook.ipynb
.cursor/commands/: review.md
data_pipeline/: README.md  exploring.ipynb  export_json.py  main.py  pyproject.toml
data_pipeline/data/: boardgames.json
frontend/: .posthog-events.json  SEO.md  instrumentation-client.ts  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
frontend/src/components/: filter-controls.tsx  game-detail-card.tsx  game-metadata.tsx  game-table.tsx  scatter-plot.tsx
frontend/src/components/ui/: command.tsx  multi-select.tsx
frontend/src/data/: games.json
frontend/src/hooks/: use-chart-zoom.ts  use-game-selection.ts
frontend/src/lib/: filter-games.ts
frontend/src/types/: game.ts
