[project]
name = "bgg-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "tqdm>=4.66.5",
    "numpy<=2.0",
    "streamlit>=1.39.0",
    "pyarrow>=17.0.0",
    "plotly>=5.24.1",
    "ruff>=0.7.1",
    "paretoset>=1.2.4",
    "scikit-learn>=1.5.2",
]

[tool.poetry]
name = "bgg-filter"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ipykernel = ">=6.29.5"
pandas = ">=2.2.3"
requests = ">=2.32.3"
requests-cache = ">=1.2.1"
requests-ratelimiter = ">=0.7.0"
seaborn = ">=0.13.2"
matplotlib = ">=3.9.2"
tqdm = ">=4.66.5"
numpy = "<=2.0"
streamlit = ">=1.39.0"
pyarrow = ">=17.0.0"
plotly = ">=5.24.1"
ruff = ">=0.7.1"
paretoset = ">=1.2.4"
scikit-learn = ">=1.5.2"
